<resources>

    <!-- App Name -->
    <string name="app_name">Connecting The Dots</string>

    <!-- Common -->
    <string name="api_key">AIzaSyCnaS2BwLjhQ5mWZU0U8z4ppydasbHF_Sk</string>
    <string name="text_no_orders">주문 내역이 없어요.\n 지금 메뉴를 골라보세요!</string>
    <string name="text_confirm">확인</string>
    <string name="text_cancel">취소</string>
    <string name="message_location_permission_need">위치 권한이 필요해요.</string>

    <!-- Splash -->
    <string name="text_splash">카페에 입장중입니다…</string>

    <!-- Main -->
    <string name="description_fab_main">Shopping Cart</string>
    <string name="description_fab_order">Go To Order</string>

    <!-- Home -->
    <string name="text_nickname_end">님</string>
    <string name="text_greeting">좋은 하루 보내세요.</string>
    <string name="text_notice">알림판</string>
    <string name="text_latest_orders">최근 주문 내역</string>
    <string name="text_name_end">님.</string>
    <string name="text_welcome">오늘도 좋은 하루 되세요.</string>
    <string name="text_today_event">오늘의 이벤트</string>

    <!-- Chatting -->
    <string name="text_menu_chatting">인기 메뉴</string>
    <string name="text_order_chatting">플랜 체크\n중단</string>
    <string name="text_shop_chatting">플랜 현황\n보고</string>
    <string name="text_plan_chatting">플랜 체크</string>
    <string name="description_image_upload">이미지 업로드</string>
    <string name="text_send">전송</string>
    <string name="text_question">궁금한 사항을 질문해주세요!</string>
    <string name="text_hint_chatting">어떤 게 궁금하세요?</string>
    <string name="message_need_message_or_image">메시지나 이미지를 입력하세요.</string>
    <string name="message_preparing_menu">준비중인 메뉴에요.</string>
    <string name="text_select_plan_grade">플랜 체크 강도를 선택하세요.</string>
    <string name="text_plan_grade_zero">알람 필요 없음</string>
    <string name="text_plan_grade_one">1시간</string>
    <string name="text_plan_grade_two">30분</string>
    <string name="text_need_plan_check">플랜 체크 방법을 선택하세요.</string>
    <string name="text_plan_image">손글씨 업로드</string>
    <string name="text_plan_text">텍스트로 입력</string>
    <string name="text_need_plan_text">플랜 체크 텍스트를 입력하세요.</string>
    <string name="text_need_plan_progress">플랜 현황을 입력하세요.</string>
    <string name="message_plan_submit">플랜 전송을 완료했어요.</string>
    <string name="message_plan_progress_submit">플랜 현황 전송을 완료했어요.</string>
    <string name="message_plan_delete">플랜이 삭제되었어요.</string>
    <string name="message_plan_delete_fail">플랜 삭제에 실패했어요.</string>

    <!-- Login, Join -->
    <string name="text_login">로그인</string>
    <string name="text_hint_id">ID</string>
    <string name="text_hint_pw">PW</string>
    <string name="text_button_login">LOGIN</string>
    <string name="text_button_join">JOIN</string>
    <string name="text_join">회원가입</string>
    <string name="text_hint_join_id">아이디를 입력하세요.</string>
    <string name="text_hint_join_pw">비밀번호를 입력하세요.</string>
    <string name="text_hint_join_nickname">별명을 입력하세요.</string>
    <string name="text_menu_home">Home</string>
    <string name="text_menu_order">Order</string>
    <string name="text_menu_mypage">Mypage</string>
    <string name="text_go_cart">장바구니 담기</string>
    <string name="text_need_login">원활한 이용을 위해서는 로그인이 필요해요.</string>
    <string name="text_need_join">회원가입을 해주세요.</string>
    <string name="text_confirm_join"> · 아이디는 영문, 숫자 혼합하여 2~12자리 이내로 입력하세요. \n· 비밀번호는 영문, 숫자 혼합하여 8~16자리 이내로 입력하세요. 특수문자는 꼭 1자 이상 포함하세요.\n· 아이디와 같은 비밀번호, 생일, 학번, 전화번호 등 개인정보와 관련된 숫자, 연속된 숫자, 동일하게 반복된 숫자 등 다른 사람이 쉽게 알아낼 수 있는 비밀번호는 유출 위험이 높아요.</string>
    <string name="message_login_success">로그인에 성공했어요.</string>
    <string name="message_login_failed">로그인에 실패했어요.</string>
    <string name="message_join_id_duplicate">중복된 아이디에요.</string>
    <string name="message_join_id_able">사용 가능한 아이디에요.</string>
    <string name="message_join_fail">회원 가입에 실패했어요.</string>

    <!-- Store Event -->
    <string name="text_store_event">이용 알림</string>
    <string name="text_store_event_description">1. 스마트스토어 방문을 환영합니다. 즐거운 시간 보내세요.\n 2. 매장내 이용시 테이블의 NFC를 태그하면 해당 테이블로 음료를 가져다드립니다.</string>

    <!-- Order -->
    <string name="text_hot">HOT</string>
    <string name="text_iced">ICED</string>
    <string name="text_price">가격</string>
    <string name="text_count">수량</string>
    <string name="text_rating">평점</string>
    <string name="text_enroll">등록</string>
    <string name="text_put_cart">담기</string>
    <string name="text_hint_comment">코멘트를 입력하세요.</string>
    <string name="text_rating_end">점</string>
    <string name="text_go_to_cart">담기</string>
    <string name="text_go_to_order">주문하기</string>
    <string name="text_empty_comment">에 대한 평가가 없어요.</string>

    <!-- My Page -->
    <string name="text_no_user_my_page">회원님,</string>
    <string name="text_need_login_my_page">로그인해서 더 많은 서비스를 누려보세요!</string>
    <string name="text_sign_up_my_page">Sign Up</string>
    <string name="text_login_my_page">Login</string>
    <string name="text_user_end_my_page">님,</string>
    <string name="text_class_my_page">등급</string>
    <string name="text_next_class_start_my_page">다음 등급까지</string>
    <string name="text_next_class_end_my_page">잔 남았습니다.</string>
    <string name="text_hello">오늘도 좋은 하루 되세요.</string>
    <string name="text_step">단계</string>
    <string name="text_next_level">다음 레벨까지</string>
    <string name="text_remain">잔 남았습니다.</string>
    <string name="text_slash">/</string>
    <string name="text_orders">주문내역</string>
    <string name="text_six_months">(최근 6개월)</string>
    <string name="text_history_eng">History</string>
    <string name="text_information_eng">Information</string>
    <string name="text_coupon_eng">Coupon</string>
    <string name="text_attendance_eng">Attendance</string>
    <string name="message_need_to_login">로그인이 필요해요!</string>
    <string name="message_disabled_pay">결제 기능은 준비중이에요.</string>

    <!-- Notice -->
    <string name="text_notices">알림함</string>
    <string name="text_notice_nothing">미확인된 알림이 없어요.</string>
    <string name="message_notice_delete">알림을 삭제했어요.</string>

    <!-- Setting -->
    <string name="text_settings">환경설정</string>
    <string name="text_theme">테마</string>
    <string name="text_theme_primary">기본</string>
    <string name="text_theme_spring">봄</string>
    <string name="text_theme_summer">여름</string>
    <string name="text_theme_autumn">가을</string>
    <string name="text_theme_winter">겨울</string>
    <string name="text_push_notification">푸시 알림</string>
    <string name="text_version">버전 정보</string>
    <string name="text_logout">로그아웃</string>
    <string name="message_logout">로그아웃에 성공했어요.</string>

    <!-- History -->
    <string name="text_history">히스토리</string>
    <string name="text_history_nothing">주문 내역이 없어요.</string>

    <!-- Information -->
    <string name="text_information">계정 설정</string>
    <string name="text_id">아이디</string>
    <string name="text_name">별명</string>
    <string name="text_password">비밀번호</string>
    <string name="text_password_update">비밀번호 변경</string>

    <!-- Password -->
    <string name="text_of_nim">님의</string>
    <string name="text_title_update_password">비밀번호를 변경합니다.</string>
    <string name="text_hint_new_password">새 비밀번호</string>
    <string name="text_hint_new_password_confirm">새 비밀번호 확인</string>
    <string name="text_safe_password">안전한 비밀번호 만들기</string>
    <string name="text_safe_password_description"> · 영문, 숫자 혼합하여 8~16자리 이내로 입력하세요. 특수문자는 꼭 1자 이상 포함하세요.\n
 · 아이디와 같은 비밀번호, 생일, 학번, 전화번호 등 개인정보와 관련된 숫자, 연속된 숫자, 동일하게 반복된 숫자 등 다른 사람이 쉽게 알아낼 수 있는 비밀번호는 유출 위험이 높아요.\n
 · 도용의 우려가 있으니, 가급적 새로운 비밀번호를 사용해 주세요.</string>
    <string name="message_password_update">비밀번호를 성공적으로 변경했어요. 다시 로그인해주세요!</string>
    <string name="message_password_update_fail">비밀번호 변경에 실패했어요…</string>

    <!-- Coupon -->
    <string name="text_coupon">쿠폰함</string>
    <string name="text_no_coupon">사용 가능한 쿠폰이 없어요.</string>
    <string name="description_coupon">Coupon Icon</string>
    <string name="text_use_coupon">쿠폰 사용하기</string>

    <!-- Pay -->
    <string name="text_pay">결제 정보</string>

    <!-- Attendance -->
    <string name="text_nothing">-</string>
    <string name="text_year">년</string>
    <string name="text_sunday">일</string>
    <string name="text_monday">월</string>
    <string name="text_tuesday">화</string>
    <string name="text_wednesday">수</string>
    <string name="text_thursday">목</string>
    <string name="text_friday">금</string>
    <string name="text_saturday">토</string>
    <string name="text_attendance">출석</string>

    <!-- Order -->
    <string name="text_menu">메뉴</string>

    <!-- Order Detail -->
    <string name="text_order_detail">주문 내역</string>
    <string name="text_order_finish">주문완료</string>
    <string name="message_comment_update">리뷰를 수정했어요.</string>
    <string name="message_comment_update_fail">리뷰 수정에 실패했어요.</string>
    <string name="message_comment_delete">리뷰를 삭제했어요.</string>
    <string name="message_comment_delete_fail">리뷰 삭제에 실패했어요.</string>

    <!-- Rating Dialog -->
    <string name="text_select_rating">별점선택</string>

    <!-- Shopping List -->
    <string name="text_cart">장바구니</string>
    <string name="text_no_product">장바구니에 담은 품목이 없어요.</string>
    <string name="text_take_out">T-out</string>
    <string name="text_shop">매장</string>
    <string name="text_total_start">총</string>
    <string name="text_total_end">개</string>
    <string name="text_cart_information"> · 장바구니에 담은 품목은 수량을 조절하거나 삭제할 수 있어요.\n
 · 매장 주문을 하기 위해서는 NFC 태깅이 필요해요.\n
 · Take Out 주문은 거리가 200m 이하에 있는 매장에서만 가능해요.</string>
    <string name="message_order_success_start">주문에 성공했어요! 주문 번호는</string>
    <string name="message_order_success_end">번이에요.</string>
    <string name="message_order_fail">주문을 취소하셨거나, 주문에 실패하셨어요.</string>

    <!-- Shop Select -->
    <string name="text_shop_select">매장 선택</string>
    <string name="text_other_shop_select">다른 매장 찾기</string>
    <string name="text_try_order">주문하기</string>
    <string name="text_time">운영 시간</string>
    <string name="text_search_shop_select">매장을 입력하세요.</string>
    <string name="message_table_number_enroll">번 테이블 번호가 등록되었어요.</string>
    <string name="message_nfc_fail">태깅 인식에 실패했어요.</string>

    <!-- Shopping Dialog -->
    <string name="text_table_nfc">주문 시 필요한 NFC를 태깅해주세요!</string>

    <!-- Take Out Dialog -->
    <string name="text_alarm">알림</string>
    <string name="text_take_out_confirm">현재 고객님의 위치가 매장과 200m 이상 떨어져 있습니다.\n정말 주문하시겠습니까?</string>

    <!-- Item Layout -->
    <string name="text_order_finish_notice">주문하신 메뉴가 나왔습니다.</string>
    <string name="text_pick_up_finish">픽업완료</string>
    <string name="text_title_coupon_detail">쿠폰 상세 정보</string>
    <string name="text_iat_coupon_detail">부터</string>
    <string name="text_exp_coupon_detail">까지</string>

</resources>