<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ssafy.smartstore_jetpack.presentation.views.main.MainViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".login.LoginFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_padding_regular" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_top_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/margin_padding_less_larger" />

            <TextView
                android:id="@+id/tv_title_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardblack"
                android:text="@string/text_login"
                android:textColor="@color/neutral_100"
                android:textSize="@dimen/font_size_title"
                app:layout_constraintEnd_toStartOf="@id/gl_end_login"
                app:layout_constraintStart_toEndOf="@id/gl_start_login"
                app:layout_constraintTop_toBottomOf="@id/gl_top_login" />

            <TextView
                android:id="@+id/tv_description_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardregular"
                android:text="@string/text_need_login"
                android:textColor="@color/neutral_70"
                android:textSize="@dimen/font_size_normal"
                app:layout_constraintBottom_toTopOf="@id/et_id_login"
                app:layout_constraintEnd_toStartOf="@id/gl_end_login"
                app:layout_constraintStart_toEndOf="@id/gl_start_login"
                app:layout_constraintTop_toBottomOf="@id/tv_title_login"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_id_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_less_larger"
                android:layout_marginTop="@dimen/margin_padding_less_larger"
                android:layout_marginEnd="@dimen/margin_padding_less_larger"
                android:background="@drawable/shape_comment"
                android:hint="@string/text_hint_id"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:onTextChanged="@{(id, s, b, c) -> vm.validateUserId(id)}"
                android:text="@={vm.userId}"
                android:textSize="@dimen/font_size_regular"
                app:layout_constraintBottom_toTopOf="@id/et_pw_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_login"
                app:normalEditText="@{vm.appThemeName}" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pw_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_less_larger"
                android:layout_marginTop="@dimen/margin_padding_regular"
                android:layout_marginEnd="@dimen/margin_padding_less_larger"
                android:background="@drawable/shape_comment"
                android:hint="@string/text_hint_pw"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:onTextChanged="@{(pass, s, b, c) -> vm.validateUserPass(pass)}"
                android:text="@={vm.userPass}"
                android:textSize="@dimen/font_size_regular"
                app:layout_constraintBottom_toTopOf="@id/btn_login_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_id_login"
                app:normalEditText="@{vm.appThemeName}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_regular"
                android:layout_marginTop="@dimen/margin_padding_regular"
                android:layout_marginEnd="@dimen/margin_padding_small"
                android:enabled="@{vm.loginUiState.loginBtnEnable}"
                android:onClick="@{() -> vm.onClickLogin()}"
                android:text="@string/text_button_login"
                android:textColor="@color/neutral_100"
                app:enableLogin="@{vm.loginUiState}"
                app:enableLoginCustomTheme="@{vm.appThemeName}"
                app:layout_constraintBottom_toTopOf="@id/gl_bottom_login"
                app:layout_constraintEnd_toStartOf="@id/btn_join_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_pw_login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_join_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:layout_marginEnd="@dimen/margin_padding_regular"
                android:onClick="@{() -> vm.onClickJoin()}"
                android:text="@string/text_button_join"
                android:textColor="@color/neutral_100"
                app:buttonCustomTheme="@{vm.appThemeName}"
                app:layout_constraintBottom_toBottomOf="@id/btn_login_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_login_login"
                app:layout_constraintTop_toTopOf="@id/btn_login_login" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_padding_regular" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_bottom_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/margin_padding_regular" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
